--- a/news.html
+++ b/news.html
@@ -38,7 +38,8 @@
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
-            </div>
+            </div>  
+            <input type="checkbox" id="switch">          
             <div class="nav-icons">
                 <ul>
                     <li><a href="#">
@@ -46,10 +47,30 @@
                     </a></li>
                     <li><a href="#">
                         <i class="fa-solid fa-user" style="color: #401202;"></i>
-                    </a></li>
-                    <li class="menu"><a href="#">
-                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
-                    </a></li>
+                    </a></li>  
+                    <label for="switch">
+                        <li class="menu">
+                            <i class="fa-solid fa-bars" style="color: #401202;">
+                            </i>
+                        </li>
+                    </label>               
+                </ul>
+            </div>
+            <div class="hb">
+                <ul>
+                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="news.html">最新消息</a></li>
+                    <li><a href="products.html">購買麵包</a></li>
+                    <li><a href="introduce-bread.html">認識麵包</a></li>
+                    <li><a href="qna.html">常見問題</a></li>
+                    <li class="social-media">
+                        <a href="#" class="fb">
+                            <i class="fa-brands fa-facebook" ></i>
+                        </a>
+                        <a href="#" class="ig">
+                            <i class="fa-brands fa-instagram" ></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -199,7 +220,8 @@
                     <a href="#">2</a>
                     <a href="#">3</a>
                     <a href="#">4</a>
-                    <a href="#">5</a>
+                    <a href="#">...</a>
+                    <a href="#"><i class="fa-solid fa-chevron-right"></i> </a>
                 </div>
             </div>
         </div>            
