--- a/products-detail.html
+++ b/products-detail.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="CSS/productsdetail-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <script src="./JS/jQuery/jquery-3.7.1.js"></script>
+    <!-- <script src="./JS/function.js"></script> -->
     <title> 純鮮奶吐司 | 常見問題 | 日光小麥所</title>
 </head>
 <body>
@@ -37,7 +39,8 @@
         <nav>
             <div class="logo">
                 <a href="index.html"><img src="https://picsum.photos/72/72/?random=10"></a>
-            </div>
+            </div>  
+            <input type="checkbox" id="switch">          
             <div class="nav-icons">
                 <ul>
                     <li><a href="#">
@@ -45,10 +48,30 @@
                     </a></li>
                     <li><a href="#">
                         <i class="fa-solid fa-user" style="color: #401202;"></i>
-                    </a></li>
-                    <li class="menu"><a href="#">
-                        <i class="fa-solid fa-bars" style="color: #401202;"></i>
-                    </a></li>
+                    </a></li>  
+                    <label for="switch">
+                        <li class="menu">
+                            <i class="fa-solid fa-bars" style="color: #401202;">
+                            </i>
+                        </li>
+                    </label>               
+                </ul>
+            </div>
+            <div class="hb">
+                <ul>
+                    <li><a href="about.html">關於我們</a></li>
+                    <li><a href="news.html">最新消息</a></li>
+                    <li><a href="products.html">購買麵包</a></li>
+                    <li><a href="introduce-bread.html">認識麵包</a></li>
+                    <li><a href="qna.html">常見問題</a></li>
+                    <li class="social-media">
+                        <a href="#" class="fb">
+                            <i class="fa-brands fa-facebook" ></i>
+                        </a>
+                        <a href="#" class="ig">
+                            <i class="fa-brands fa-instagram" ></i>
+                        </a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -58,8 +81,6 @@
             <h1>購買麵包</h1>
         </div>
         <div class="wrap">
-            <div class="bread-pic-1"><img src="images/bread-illus/bread-6.png" alt=""></div>
-            <div class="bread-pic-2"><img src="images/bread-illus/bread-5.png" alt=""></div>
             <div class="wrap-item">
                 <div class="bread-crumbs">
                     <ul>
@@ -69,8 +90,20 @@
                 </div>
                 <div class="order-section">
                     <div class="pic">
-                        <div class="lg-pic">
-                            <img src="images/product-detail/products-detail-lg.png">
+                        <div class="lg-pic" id="lg-pic">
+                            <ul id="lg-pic-list">
+                                <li><img src="images/product-detail/products-detail-lg.png"></li>
+                                <!-- <li><img src="images/product-detail/lg-pic-2.png"></li> 
+                                <li><img src="images/product-detail/lg-pic-3.png"></li>
+                                <li><img src="images/product-detail/lg-pic-4.png"></li>
+                                <li><img src="images/product-detail/lg-pic-5.png"></li> -->
+                            </ul>
+                            <!-- <ul id="contentButton"></ul>
+                            <span id="pic-number"></span> -->
+                            <!-- <div class="move-icon">
+                                <a href id="prev"><img src="/images/home/home-news-left.svg" alt=""></a>
+                                <a href id="next"><img src="/images/home/home-news-right.svg" alt=""></a>
+                            </div> -->
                         </div>
                         <div class="sm-pic-list">
                             <div class="sm-pic">
@@ -88,8 +121,6 @@
                         </div>
                     </div>
                     <div class="buy">
-                        <div class="bread-pic-3"><img src="images/bread-illus/bread-3.png" alt=""></div>
-                        <div class="bread-pic-4"><img src="images/bread-illus/bread-4.png" alt=""></div>
                         <div class="title">
                             <h2>純鮮奶吐司</h2>
                         </div>
@@ -185,6 +216,6 @@
             </a>
         </div>
     </div>
-    <script src="JS/scrolled.js"> </script>
+    <!-- <script src="JS/scrolled.js"> </script> -->
 </body>
 </html>
