--- a/qna.html
+++ b/qna.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="CSS/qna-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <script src="./JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="./JS/function.js"></script>
     <title>常見問題 | 日光小麥所</title>
 </head>
 <body>
@@ -87,14 +89,11 @@
                 </ul>
                 </div>
                 <div class="item">
-                    <input type="checkbox" id="question-1" name="question">
                     <div class="question">
                         <h5>購買麵包是否需要註冊成為會員？</h5>
                         <div class="icon">
-                            <label for="question-1" class="q-1">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
                             <i class="fa-solid fa-plus" style="color: #60222b;"></i>
-                            </label>
                         </div>
                     </div>
                     <div class="answer">
@@ -109,6 +108,7 @@
                         <h5>能否取消或修改訂單？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -121,6 +121,7 @@
                         <h5>訂購麵包後一般會幾天後到會貨呢?</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -132,6 +133,7 @@
                         <h5>有哪些支付方式可以使用？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -143,6 +145,7 @@
                         <h5>有提供素食或特殊口味的麵包選擇嗎？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -154,6 +157,7 @@
                         <h5>如何知道最新消息？</h5>
                         <div class="icon">
                             <i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -208,6 +212,6 @@
             </a>
         </div>
     </div>
-    <script src="JS/scrolled.js"> </script>
+    <!-- <script src="JS/scrolled.js"> </script> -->
 </body>
 </html>
