--- a/products-detail.html
+++ b/products-detail.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
     <script src="./JS/jQuery/jquery-3.7.1.js"></script>
-    <!-- <script src="./JS/function.js"></script> -->
+    <script src="./JS/function.js"></script>
     <title> 純鮮奶吐司 | 常見問題 | 日光小麥所</title>
 </head>
 <body>
@@ -90,16 +90,17 @@
                 </div>
                 <div class="order-section">
                     <div class="pic">
+                        <img src="images/product-detail/products-detail-lg.png" alt="">
                         <div class="lg-pic" id="lg-pic">
                             <ul id="lg-pic-list">
                                 <li><img src="images/product-detail/products-detail-lg.png"></li>
-                                <!-- <li><img src="images/product-detail/lg-pic-2.png"></li> 
+                                <li><img src="images/product-detail/lg-pic-2.png"></li> 
                                 <li><img src="images/product-detail/lg-pic-3.png"></li>
                                 <li><img src="images/product-detail/lg-pic-4.png"></li>
-                                <li><img src="images/product-detail/lg-pic-5.png"></li> -->
+                                <li><img src="images/product-detail/lg-pic-5.png"></li>
                             </ul>
-                            <!-- <ul id="contentButton"></ul>
-                            <span id="pic-number"></span> -->
+                            <ul id="contentButton"></ul>
+                            <span id="pic-number"></span>
                             <!-- <div class="move-icon">
                                 <a href id="prev"><img src="/images/home/home-news-left.svg" alt=""></a>
                                 <a href id="next"><img src="/images/home/home-news-right.svg" alt=""></a>
