--- a/qna.html
+++ b/qna.html
@@ -92,8 +92,8 @@
                     <div class="question">
                         <h5>購買麵包是否需要註冊成為會員？</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -107,8 +107,8 @@
                     <div class="question">
                         <h5>能否取消或修改訂單？</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -120,8 +120,8 @@
                     <div class="question">
                         <h5>訂購麵包後一般會幾天後到會貨呢?</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -132,8 +132,8 @@
                     <div class="question">
                         <h5>有哪些支付方式可以使用？</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -144,8 +144,8 @@
                     <div class="question">
                         <h5>有提供素食或特殊口味的麵包選擇嗎？</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
@@ -156,8 +156,8 @@
                     <div class="question">
                         <h5>如何知道最新消息？</h5>
                         <div class="icon">
-                            <i class="fa-solid fa-minus" style="color: #60222b;"></i>
-                            <i class="fa-solid fa-plus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-minus minus" style="color: #60222b;"></i>
+                            <i class="fa-solid fa-plus plus" style="color: #60222b;"></i>
                         </div>
                     </div>
                     <div class="answer">
