--- a/introduce-bread.html
+++ b/introduce-bread.html
@@ -92,8 +92,8 @@
                     </div>
                     <div class="text-info">
                         <h4>扭結麵包</h4>
-                        <p>扭結麵包以其獨特造型和口感受歡迎。製作過程中，麵糰經揉搓後分段，通過捏捻和結繩形成特殊形狀。此步驟賦予麵包視覺吸引力和層次感。酥脆的外皮是烘焙過程的結果，內部則保持柔軟。
-                        <br>
+                        <p>扭結麵包以其獨特造型和口感受歡迎。製作過程中，麵糰經揉搓後分段，通過捏捻和結繩形成特殊形狀。此步驟賦予麵包視覺吸引力和層次感。酥脆的外皮是烘焙過程的結果，內部則保持柔軟。</p>
+                        <p>
                         口味上有多樣選擇，可甜可鹹。扭結麵包不僅是美味的點心，也可搭配其他餐點。其獨特的造型和口感成為受歡迎的麵包品種。</p>
                     </div>
                 </div>
@@ -103,8 +103,8 @@
                     </div>
                     <div class="text-info">
                         <h4>德國酸種麵包</h4>
-                        <p>一種傳統歐洲麵包，以天然酵母發酵。麵包特色包括微酸口感、內部鬆軟滿布空洞的柔軟麵包心和香脆的褐色麵包皮。製作過程始將自然發酵的酵母和乳酸菌添加至主麵糰，經長時間發酵、成形、二次發酵後，最終進行烘焙。
-                        <br>
+                        <p>一種傳統歐洲麵包，以天然酵母發酵。麵包特色包括微酸口感、內部鬆軟滿布空洞的柔軟麵包心和香脆的褐色麵包皮。製作過程始將自然發酵的酵母和乳酸菌添加至主麵糰，經長時間發酵、成形、二次發酵後，最終進行烘焙。</p>
+                        <p>
                         德國酸種麵包因獨特風味和傳統製作而受歡迎，同時被視為較為健康的麵包選擇，適合常健身、重視養生，以及消化功能脆弱的族群。
                         </p>
                     </div>
@@ -115,8 +115,8 @@
                     </div>
                     <div class="text-info">
                         <h4>柏林人酸種麵包</h4>
-                        <p>源自柏林的經典麵包，以天然酵母長時間發酵而聞名。麵包充滿微酸風味，使用小麥、燕麥和麥麩等多穀物，提供豐富營養。烘焙後，麵包外皮金黃酥脆，內部保持柔軟，形成外酥內軟的口感。
-                        <br>
+                        <p>源自柏林的經典麵包，以天然酵母長時間發酵而聞名。麵包充滿微酸風味，使用小麥、燕麥和麥麩等多穀物，提供豐富營養。烘焙後，麵包外皮金黃酥脆，內部保持柔軟，形成外酥內軟的口感。</p>
+                        <p>
                         這種酸種製作方式不僅提高了麵包的保存性和消化性，還增強了營養價值，柏林人酸種麵包以獨特風味和營養價值在麵包愛好者中廣受歡迎，滿足了追求美味和健康的需求。</p>
                     </div>
                 </div>
@@ -126,8 +126,8 @@
                     </div>
                     <div class="text-info">
                         <h4>手拿棒</h4>
-                        <p>手拿棒為鄉村麵包，以天然酵母慢發酵製作。其成分簡單，包括小麥麵粉、水、酵母和鹽，保留了原味。鄉村麵包質地粗糙，含有穀粒和堅果。經過烘焙後，麵包外皮呈現金黃且脆，內部保持濕潤。以自然、健康為主的鄉村麵包深受注重營養價值和風味的消費者喜愛。
-                        <br>
+                        <p>手拿棒為鄉村麵包，以天然酵母慢發酵製作。其成分簡單，包括小麥麵粉、水、酵母和鹽，保留了原味。鄉村麵包質地粗糙，含有穀粒和堅果。經過烘焙後，麵包外皮呈現金黃且脆，內部保持濕潤。以自然、健康為主的鄉村麵包深受注重營養價值和風味的消費者喜愛。</p>
+                        <p>
                         日光小麥所為方便拿取食用而將麵包改良成長條、適合手拿的形狀，這也是手拿棒的名稱由來。</p>
                     </div>
                 </div>
