--- a/products-detail.html
+++ b/products-detail.html
@@ -81,7 +81,7 @@
             <h1>購買麵包</h1>
         </div>
         <div class="wrap">
-            <div class="wrap-item">
+            <div class="wrap-item illus">
                 <div class="bread-crumbs">
                     <ul>
                         <li><a href="index.html">首頁</a></li>
@@ -90,7 +90,7 @@
                 </div>
                 <div class="order-section">
                     <div class="pic">
-                        <img src="images/product-detail/products-detail-lg.png" alt="">
+                        <img class="full" src="images/product-detail/products-detail-lg.png" alt="">
                         <div class="lg-pic" id="lg-pic">
                             <ul id="lg-pic-list">
                                 <li><img src="images/product-detail/products-detail-lg.png"></li>
@@ -132,10 +132,10 @@
                         <div class="price-amount">
                             <div class="price"><span>$50</span></div>
                             <div class="amount">
-                                <span class="minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
+                                <span class="btn-minus"><i class="fa-solid fa-minus" style="color: #60222b;"></i>
                                 </span>
                                 <input type="number" value="1" min="1" class="buy-number" >
-                                <span class="plus">
+                                <span class="btn-plus">
                                     <i class="fa-solid fa-plus" style="color: #60222b;"></i>
                                 </span>
                             </div>
