--- a/qna.html
+++ b/qna.html
@@ -81,7 +81,7 @@
             <h1>常見問題</h1>
         </div>
         <div class="wrap">
-            <div class="wrap-item">
+            <div class="wrap-item illus">
                 <div class="bread-crumbs">
                 <ul>
                     <li><a href="index.html">首頁</a></li>
