--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="CSS/home-style.css">
     <link rel="stylesheet" href="CSS/component-set.css">
     <script src="https://kit.fontawesome.com/ea4f510ceb.js" crossorigin="anonymous"></script>
+    <script src="/JS/jQuery/jquery-3.7.1.js"></script>
+    <script src="/JS/function.js"></script>
     <title>日光小麥所</title>
 </head>
 <body>
@@ -121,75 +123,87 @@
             </div>
             <div class="news">
                 <h2>最新消息</h2>
-                <div class="news-container">
-                    <div class="news-wrap">
-                        <a href="news-detail.html" class="card">
-                            <div class="pic"><img src="images/home/news-1.png"></div>
-                            <h5>秋季新品！栗子蒙布朗吐司</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="new">New</span></div>
-                                <div class="time">2023.11.09</div>
-                            </div>
-                        </a>
-                        <a href="#" class="card">
-                            <div class="pic"><img src="images/home/news-2.png"></div>
-                            <h5>美味多重享受！經典貝果組</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="discount">優惠</span></div>
-                                <div class="time">2023.10.25</div>
-                            </div>
-                        </a>
-                        <a href="#" class="card">
-                            <div class="pic samepic">
-                                <img src="images/home/news-3.png">
-                                <span>店家休息公告</span>
-                            </div>
-                            <h5>日光小麥所休息公告</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="inform">公告</span></div>
-                                <div class="time">2023.10.13</div>
-                            </div>
-                        </a>
-                        <a href="#" class="card">
-                            <div class="pic samepic">
-                                <img src="images/home/news-3.png">
-                                <span>店家休息公告</span>
-                            </div>
-                            <h5>日光小麥所休息公告</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="inform">公告</span></div>
-                                <div class="time">2023.10.13</div>
-                            </div>
-                        </a>
-                        <a href="#" class="card">
-                            <div class="pic samepic">
-                                <img src="images/home/news-3.png">
-                                <span>店家休息公告</span>
-                            </div>
-                            <h5>日光小麥所休息公告</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="inform">公告</span></div>
-                                <div class="time">2023.10.13</div>
-                            </div>
-                        </a>
-                        <a href="#" class="card">
-                            <div class="pic samepic">
-                                <img src="images/home/news-3.png">
-                                <span>店家休息公告</span>
-                            </div>
-                            <h5>日光小麥所休息公告</h5>
-                            <div class="below-info">
-                                <div class="tag"><span class="inform">公告</span></div>
-                                <div class="time">2023.10.13</div>
-                            </div>
-                        </a>
-                    </div>
+                <div class="news-container" id="container">
+                    <ul class="news-wrap" id="container-list">
+                        <li>
+                            <a href="news-detail.html" class="card">
+                                <div class="pic"><img src="images/home/news-1.png"></div>
+                                <h5>秋季新品！栗子蒙布朗吐司</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="new">New</span></div>
+                                    <div class="time">2023.11.09</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="card">
+                                <div class="pic"><img src="images/home/news-2.png"></div>
+                                <h5>美味多重享受！經典貝果組</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="discount">優惠</span></div>
+                                    <div class="time">2023.10.25</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="card">
+                                <div class="pic samepic">
+                                    <img src="images/home/news-3.png">
+                                    <span>店家休息公告</span>
+                                </div>
+                                <h5>日光小麥所休息公告</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="inform">公告</span></div>
+                                    <div class="time">2023.10.13</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="card">
+                                <div class="pic samepic">
+                                    <img src="images/home/news-3.png">
+                                    <span>店家休息公告</span>
+                                </div>
+                                <h5>日光小麥所休息公告</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="inform">公告</span></div>
+                                    <div class="time">2023.10.13</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="card">
+                                <div class="pic samepic">
+                                    <img src="images/home/news-3.png">
+                                    <span>店家休息公告</span>
+                                </div>
+                                <h5>日光小麥所休息公告</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="inform">公告</span></div>
+                                    <div class="time">2023.10.13</div>
+                                </div>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#" class="card">
+                                <div class="pic samepic">
+                                    <img src="images/home/news-3.png">
+                                    <span>店家休息公告</span>
+                                </div>
+                                <h5>日光小麥所休息公告</h5>
+                                <div class="below-info">
+                                    <div class="tag"><span class="inform">公告</span></div>
+                                    <div class="time">2023.10.13</div>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                     <div class="move-icon">
                         <a href="#" class="left-btn">
-                            <img src="images/home/home-news-left.svg" alt=""></i>                    
+                            <img id="left-btn" src="images/home/home-news-left.svg" alt=""></i>                    
                         </a>
                         <a href="#" class="right-btn">
-                            <img src="images/home/home-news-right.svg" alt=""></i>
+                            <img id="right-btn" src="images/home/home-news-right.svg" alt=""></i>
                         </a>
                     </div>
         
